--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   cloud_firestore: ^0.12.9+5
   provider: ^4.3.2+2
   horizontal_data_table: ^1.0.6+3
+  image_picker: ^0.6.7+12
+  firebase_storage: ^3.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
